test/classes/casts/GenericDowncast.1.good
GenericDowncast.chpl:6: In function 'main':
GenericDowncast.chpl:10: error: illegal downcast to generic subclass type 'owned D'
